결제 테스트

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portone-example-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@portone/browser-sdk": "^0.0.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -19,6 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "http": "ts-node --project tsconfig-http.json http/main.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.1",
+    "ulid": "^2.3.0"
   }
 }
